Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27044

Qt Creator 6.0.3 crash

XMLWordPrintable

    • Windows
    • 86f1864d3c (qt-creator/qt-creator/7.0) 86f1864d3c (qt-creator/qt-creator/master) 86f1864d3c (qt-creator/tqtc-qt-creator/7.0) 86f1864d3c (qt-creator/tqtc-qt-creator/master) 86f1864d3c (qt-creator/tqtc-qt-creator/qds-3.1)

      Hello!

      I want to report the crash issue with Qt Creator 6.0.3 (built using Qt 5) on Windows 10. I have downloaded the Qt Creator 6.0.3 from: https://download.qt.io/snapshots/qtcreator_qt5/6.0/6.0.3/
      It crashes sometimes when multiple projects are open/closed, when building the project. I have attached the dump files and the dump information about this crash in the file. It seems the problem is with: ProjectExplorer!ProjectExplorer::CustomProjectWizard method. Please, fix this issue. Thank you.

        1. Qt Creator 6.0.3 crash log.txt
          8 kB
          Ruslan Sydorvych
        2. qtcreator.exe.9184.dmp
          22.16 MB
          Ruslan Sydorvych
        3. qtcreator.exe.9256.dmp
          22.23 MB
          Ruslan Sydorvych
        4. qtcreator.exe.12752.dmp
          21.92 MB
          Ruslan Sydorvych
        5. qtcreator.exe.16612.dmp
          22.25 MB
          Ruslan Sydorvych
        6. qtcreator.exe.13088.dmp
          22.21 MB
          Ruslan Sydorvych
        For Gerrit Dashboard: QTCREATORBUG-27044
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            cobra91151 Ruslan Sydorvych
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes